force-app/main/default/objects/OrderItem/fields/CustomName__c.field-meta.xml
<CustomField>
    <fullName>CustomName__c</fullName>
    <description>User defined item name. This is valid only in certain products.</description>
    <label>Custom Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>