force-app/main/default/objects/OrderItem/fields/NB2B_Billing_Status__c.field-meta.xml
<CustomField>
    <fullName>NB2B_Billing_Status__c</fullName>
    <label>NB2B_Billing Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>