force-app/main/default/objects/OrderItem/fields/NB2B_Delivery__c.field-meta.xml
<CustomField>
    <fullName>NB2B_Delivery__c</fullName>
    <label>NB2B_Delivery Date</label>
    <type>Date</type>
</CustomField>