force-app/main/default/objects/OrderItem/fields/NB2B_Position__c.field-meta.xml
<CustomField>
    <fullName>NB2B_Position__c</fullName>
    <label>NB2B_Position</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>