force-app/main/default/objects/OrderItem/fields/NB2B_ProductUnit__c.field-meta.xml
<CustomField>
    <fullName>NB2B_ProductUnit__c</fullName>
    <formula>TEXT(Product2.SalesUnit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Unit</label>
    <type>Text</type>
</CustomField>