force-app/main/default/objects/OrderItem/fields/NB2B_SQMetres__c.field-meta.xml
<CustomField>
    <fullName>NB2B_SQMetres__c</fullName>
    <formula>Quantity  * Product2.UmbMt2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NB2B_SQMetres</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>