force-app/main/default/objects/OrderItem/fields/NB2B_TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>NB2B_TaxAmount__c</fullName>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>