force-app/main/default/objects/OrderItem/fields/ProductSalesUnit__c.field-meta.xml
<CustomField>
    <fullName>ProductSalesUnit__c</fullName>
    <description>Product default  sales unit</description>
    <formula>Product2.Umv__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Sales Unit</label>
    <type>Text</type>
</CustomField>