force-app/main/default/objects/OrderItem/fields/ReferredLine__c.field-meta.xml
<CustomField>
    <fullName>ReferredLine__c</fullName>
    <description>Invoice line referred (credits, returns, etc)</description>
    <label>Referred Line</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>