force-app/main/default/objects/OrderItem/fields/SalesUnit__c.field-meta.xml
<CustomField>
    <fullName>SalesUnit__c</fullName>
    <label>SalesUnit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductUnits</valueSetName>
    </valueSet>
</CustomField>