force-app/main/default/objects/OrderItem/fields/Sap_id__c.field-meta.xml
<CustomField>
    <fullName>Sap_id__c</fullName>
    <label>Sap_id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>