force-app/main/default/objects/OrderItem/fields/UnitPriceUnitCode__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceUnitCode__c</fullName>
    <label>Unit Price Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductUnits</valueSetName>
    </valueSet>
</CustomField>