force-app/main/default/objects/OrderItem/validationRules/NBK_Sample_ListPrice.validationRule-meta.xml
<ValidationRule>
    <fullName>NBK_Sample_ListPrice</fullName>
    <active>true</active>
    <errorConditionFormula>UnitPrice &lt;&gt;  0
&amp;&amp;
Order.RecordTypeId = &apos;0126M0000007B9p&apos;</errorConditionFormula>
    <errorDisplayField>UnitPrice</errorDisplayField>
    <errorMessage>The unit price of the product cannot be greater than 0.</errorMessage>
</ValidationRule>