force-app/main/default/objects/OrderItem/validationRules/Quantity_without_decimal.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_without_decimal</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(TEXT(Quantity), &quot;^-?\\d+$&quot;))</errorConditionFormula>
    <errorDisplayField>Quantity</errorDisplayField>
    <errorMessage>Quantity with decimals are not allowed</errorMessage>
</ValidationRule>